Fixed Area nav bar covering pop out menu

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ html {
     width: 100%;
     height: 70px;
     line-height: 70px;
-    z-index: 1000;
+    z-index: 2000;
 }
 
 .routes-nav {
@@ -27,7 +27,7 @@ html {
     margin-top: 70px;
     text-align: center;
     width: 100%;
-    height: 70px;
+    height: 65px;
     line-height: 70px;
     z-index: 1000;
 }
@@ -36,7 +36,7 @@ html {
     padding: 0 30px 0 0;
     background-color: #184d47;
     box-shadow: 0 19px 38px rgba(0, 0, 0, 0.10);
-    z-index: 1;
+    z-index: 1000;
 }
 
 .routes-menu {
